# C-Multi-Plat-Boilerplate

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
android/: CMakeLists.txt
src/: imguirunner.h  main.cpp
